--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-"name": "nickcuper/bing-sdk",
+"name": "nickcuper/bingsdk",
 "description": "Bing Ads API Version 9 Client Library for PHP.",
 "keywords": ["bing", "bing-ads","api", "sdk"],
 "type": "library",
@@ -18,7 +18,7 @@
 "php": ">=5.3.3"
 },
 "autoload": {
-"classmap": ["nickcuper/bing"]
+"classmap": ["nickcuper/bingsdk"]
 },
 "extra": {
 "branch-alias": {
